force-app/main/default/objects/Appointment_Event__c/Appointment_Event__c.object-meta.xml
<CustomObject>
    <label>Appointment Event</label>
    <nameField>
        <displayFormat>AEVT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>