force-app/main/default/objects/Appointment_Event__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Appointment Events</relationshipLabel>
    <relationshipName>Appointment_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>