force-app/main/default/objects/Appointment_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of what happened</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>