force-app/main/default/objects/Appointment_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Confirmation Received</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Notification Sent</fullName>
            </value>
            <value>
                <fullName>Notification Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>