force-app/main/default/objects/Appointment_Event__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>Status after the change</description>
    <label>New Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>