force-app/main/default/objects/Appointment_Event__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user who made the change (null if API-driven)</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AppointmentUser</relationshipName>
    <type>Lookup</type>
</CustomField>