force-app/main/default/objects/Appointment_Event__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Status before the change</description>
    <label>Previous Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>