force-app/main/default/objects/Appointment_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling API</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>System (Flow/Trigger)</fullName>
            </value>
            <value>
                <fullName>Location Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>